// Vitest Snapshot v1

exports[`Feedback > should match snapshot 1`] = `
<div
  class="settings-dialog__container accent-color__poker-purple"
>
  <div
    class="settings-dialog__header"
  >
    <h2
      class="settings-dialog__header-text accent-color__poker-purple"
    >
      Feedback
    </h2>
  </div>
  <form
    class="settings-dialog__feedback-form"
  >
    <div
      class="settings-dialog__feedback-options"
    >
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          checked=""
          class="feedback-option__input"
          id="feedbackTypePraise"
          name="feedbackType"
          type="radio"
          value="PRAISE"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypePraise"
        >
          <svg
            fill="currentColor"
            height="32"
            viewBox="0 0 256 256"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="256"
              width="256"
            />
            <path
              d="M32,104H80a0,0,0,0,1,0,0V208a0,0,0,0,1,0,0H32a8,8,0,0,1-8-8V112A8,8,0,0,1,32,104Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
            <path
              d="M80,104l40-80a32,32,0,0,1,32,32V80h61.9a15.9,15.9,0,0,1,15.8,18l-12,96a16,16,0,0,1-15.8,14H80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
          </svg>
          <span>
            Praise
          </span>
        </label>
      </div>
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          class="feedback-option__input"
          id="feedbackTypeFeatureRequest"
          name="feedbackType"
          type="radio"
          value="FEATURE_REQUEST"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypeFeatureRequest"
        >
          <svg
            fill="currentColor"
            height="32"
            viewBox="0 0 256 256"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="256"
              width="256"
            />
            <circle
              cx="76"
              cy="76"
              fill="none"
              r="36"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
            <circle
              cx="180"
              cy="76"
              fill="none"
              r="36"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
            <circle
              cx="76"
              cy="180"
              fill="none"
              r="36"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="180"
              x2="180"
              y1="152"
              y2="208"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="208"
              x2="152"
              y1="180"
              y2="180"
            />
          </svg>
          <span>
            Feature Request
          </span>
        </label>
      </div>
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          class="feedback-option__input"
          id="feedbackTypeBugReport"
          name="feedbackType"
          type="radio"
          value="BUG_REPORT"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypeBugReport"
        >
          <svg
            fill="currentColor"
            height="32"
            viewBox="0 0 256 256"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="256"
              width="256"
            />
            <circle
              cx="156"
              cy="92"
              r="12"
            />
            <circle
              cx="100"
              cy="92"
              r="12"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="128"
              x2="128"
              y1="128"
              y2="224"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="244"
              x2="12"
              y1="128"
              y2="128"
            />
            <path
              d="M208,144a80,80,0,0,1-160,0V112a80,80,0,0,1,160,0Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="231.9"
              x2="203.2"
              y1="188"
              y2="171.4"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="231.9"
              x2="203.2"
              y1="68"
              y2="84.6"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="24.1"
              x2="52.8"
              y1="68"
              y2="84.6"
            />
            <line
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="16"
              x1="24.1"
              x2="52.8"
              y1="188"
              y2="171.4"
            />
          </svg>
          <span>
            Bug Report
          </span>
        </label>
      </div>
    </div>
    <button
      class="settings-option-button feedback-form__settings-button"
      type="button"
    >
      <span
        class="settings-option-button__label"
      >
        Feedback.PraiseInputLabel
      </span>
      <textarea
        class="feedback-form__feedback-textarea"
        name="feedback"
        placeholder="Feedback.FeedbackInputPlaceholder"
      />
    </button>
    <button
      class="settings-option-button feedback-form__settings-button"
      type="button"
    >
      <span
        class="settings-option-button__label"
      >
        Feedback.ContactInputLabel
      </span>
      <input
        class="feedback-form__contact-input"
        name="contact"
        placeholder="mail@inovex.de"
      />
    </button>
    <button
      class="feedback-form__submit-button"
      type="submit"
    >
      Feedback.SubmitButton
    </button>
  </form>
</div>
`;

exports[`Feedback should match snapshot 1`] = `
<div
  class="settings-dialog__container accent-color__poker-purple"
>
  <div
    class="settings-dialog__header"
  >
    <h2
      class="settings-dialog__header-text accent-color__poker-purple"
    >
      Feedback
    </h2>
  </div>
  <form
    class="settings-dialog__feedback-form"
  >
    <div
      class="settings-dialog__feedback-options"
    >
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          checked=""
          class="feedback-option__input"
          id="feedbackTypePraise"
          name="feedbackType"
          type="radio"
          value="PRAISE"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypePraise"
        >
          <svg>
            icon-praise.svg
          </svg>
          <span>
            Praise
          </span>
        </label>
      </div>
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          class="feedback-option__input"
          id="feedbackTypeFeatureRequest"
          name="feedbackType"
          type="radio"
          value="FEATURE_REQUEST"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypeFeatureRequest"
        >
          <svg>
            icon-add-feature.svg
          </svg>
          <span>
            Feature Request
          </span>
        </label>
      </div>
      <div
        class="settings-dialog__feedback-option"
      >
        <input
          class="feedback-option__input"
          id="feedbackTypeBugReport"
          name="feedbackType"
          type="radio"
          value="BUG_REPORT"
        />
        <label
          class="feedback-option__label"
          for="feedbackTypeBugReport"
        >
          <svg>
            icon-bug.svg
          </svg>
          <span>
            Bug Report
          </span>
        </label>
      </div>
    </div>
    <button
      class="settings-option-button feedback-form__settings-button"
      type="button"
    >
      <span
        class="settings-option-button__label"
      >
        Feedback.PraiseInputLabel
      </span>
      <textarea
        class="feedback-form__feedback-textarea"
        name="feedback"
        placeholder="Feedback.FeedbackInputPlaceholder"
      />
    </button>
    <button
      class="settings-option-button feedback-form__settings-button"
      type="button"
    >
      <span
        class="settings-option-button__label"
      >
        Feedback.ContactInputLabel
      </span>
      <input
        class="feedback-form__contact-input"
        name="contact"
        placeholder="mail@inovex.de"
      />
    </button>
    <button
      class="feedback-form__submit-button"
      type="submit"
    >
      Feedback.SubmitButton
    </button>
  </form>
</div>
`;
